UPDATE : readme , install options jfx 🧳